# Machine-Learning-Interviews

./: pyproject.toml
src/MLC/notebooks/: decision_tree.ipynb  knn.ipynb  logistic_regression.ipynb  numpy_practice.ipynb
